--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mindmap",
   "author": "Kris Windham",
-  "version": "0.0.1-6",
+  "version": "0.0.1-8",
   "scripts": {
     "start": "./bin/server"
   },
@@ -11,7 +11,8 @@
   "dependencies": {
     "flatiron": "*",
     "union": "*",
-    "plates": "*"
+    "plates": "*",
+    "colors": "*"
   },
   "analyze": false,
   "subdomain": "mindmap"
