--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mindmap",
   "author": "Kris Windham",
-  "version": "0.0.2",
+  "version": "0.0.2-1",
   "scripts": {
     "start": "./bin/server"
   },
